--- a/WebUI/src/app/molecules/toolbar-strip/toolbar-strip.component.css
+++ b/WebUI/src/app/molecules/toolbar-strip/toolbar-strip.component.css
@@ -5,21 +5,32 @@
     position:fixed;
     top:0px;
     left:0px;
+    z-index: 1000;
+}
+
+.toolbar-strip-table {
+    width:100%;
+    height:35px;
 }
 
 .toolbar-strip-label {
     color: #ffffff;
-    position: fixed;
-    top: 4px;
-    left: 40px;
-    height: 35px;
     font-family: "Arial", Arial, Helvetica, sans-serif;
     font-size: 24px;
 }
 
+.toolbar-strip-icon-column {
+    width:32px;
+}
+
+
 .icon {
-    display: block;
-    position: relative;
+    overflow: hidden;
+    margin: 6px;
+    padding: 0;
+}
+
+.icon-settings {
     overflow: hidden;
     margin: 6px;
     padding: 0;
