updated npm packages and save settings to file

--- a/WebUI/src/app/molecules/settings/settings.component.html
+++ b/WebUI/src/app/molecules/settings/settings.component.html
@@ -8,7 +8,7 @@
         <td class="right-text">Axis 1</td>
         <td>
           <div>
-            <app-switch size="medium" [checked]="reverse" (change)="onChangeReverse($event)" color="white"></app-switch>
+            <app-switch size="medium" [checked]="changeAxis" (change)="onChangeChangeAxis($event)" color="white"></app-switch>
           </div>
         </td>
         <td>Axis 2</td>
